lib/tests/fixtures/compiler/evaluation/divide_by_zero.pp
notice(1 / 0)
